# ypracticum-delivery-service

./: README.md  pyproject.toml
abstract_solution/calculators/: base_calculator.py  standard_calculator.py
abstract_solution/config/: cost_config.py
abstract_solution/models/: delivery_data.py
abstract_solution/services/: delivery_service.py
naive/: solution.py
tests/: conftest.py  test_abstract_solution.py  test_naive.py
