[project]
name = "ypracticum-delivery-service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kirill Lapshin", email = "2flashback@gmail.com"},
]
dependencies = [
    "pytest>=8.2.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
